--- a/index.html
+++ b/index.html
@@ -2,317 +2,39 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Will you be my Valentine?</title>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Quicksand:wght@400;500;600&display=swap"
-    rel="stylesheet">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    <title>Will you be my Valentine?</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Clear-Site-Data" content="cache, cookies, storage, executionContexts" />
+    <meta http-equiv="Expires" content="-1" />
 
-    body {
-      font-family: 'Quicksand', sans-serif;
-      min-height: 100vh;
-      overflow: hidden;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, hsl(340, 80%, 92%), hsl(330, 60%, 85%), hsl(350, 70%, 88%));
-    }
+    <link href="./favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="./css/style.css" type="text/css" rel="stylesheet" />
 
-    .falling-heart {
-      position: fixed;
-      top: -5vh;
-      pointer-events: none;
-      user-select: none;
-      animation: heart-fall var(--duration) linear var(--delay) infinite;
-    }
-
-    .falling-heart span {
-      display: inline-block;
-      animation: heart-sway var(--sway-dur) ease-in-out var(--delay) infinite alternate;
-    }
-
-    @keyframes heart-fall {
-      0% {
-        transform: translateY(-10vh) rotate(0deg);
-        opacity: 0;
-      }
-
-      10% {
-        opacity: 1;
-      }
-
-      90% {
-        opacity: 1;
-      }
-
-      100% {
-        transform: translateY(110vh) rotate(360deg);
-        opacity: 0;
-      }
-    }
-
-    @keyframes heart-sway {
-
-      0%,
-      100% {
-        transform: translateX(0);
-      }
-
-      50% {
-        transform: translateX(30px);
-      }
-    }
-
-    @keyframes pulse-glow {
-
-      0%,
-      100% {
-        box-shadow: 0 0 20px hsla(340, 80%, 55%, 0.3), 0 0 40px hsla(340, 80%, 55%, 0.1);
-      }
-
-      50% {
-        box-shadow: 0 0 30px hsla(340, 80%, 55%, 0.5), 0 0 60px hsla(340, 80%, 55%, 0.2);
-      }
-    }
-
-    @keyframes celebration-heart {
-      0% {
-        transform: translate(0, 0) scale(1) rotate(0deg);
-        opacity: 1;
-      }
-
-      100% {
-        transform: translate(var(--tx), var(--ty)) scale(0) rotate(720deg);
-        opacity: 0;
-      }
-    }
-
-    @keyframes scale-in {
-      0% {
-        transform: scale(0);
-        opacity: 0;
-      }
-
-      100% {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .center {
-      position: relative;
-      z-index: 10;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 24px;
-      padding: 0 24px;
-    }
-
-    .oval {
-      width: 192px;
-      height: 224px;
-      border-radius: 50%;
-      overflow: hidden;
-      border: 4px solid hsl(340, 80%, 55%);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: hsl(340, 60%, 97%);
-      animation: pulse-glow 3s ease-in-out infinite;
-    }
-
-    .oval span {
-      font-size: 60px;
-    }
-
-    .avatar {
-      width: 100%;
-      height: 100%;
-      display: block;
-    }
-
-    .avatar img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      /* 🔥 магія */
-      object-position: center;
-    }
-
-    h1 {
-      font-family: 'Dancing Script', cursive;
-      font-size: clamp(2rem, 5vw, 3.2rem);
-      font-weight: 700;
-      color: hsl(345, 90%, 40%);
-      text-shadow: 0 2px 10px hsla(340, 80%, 55%, 0.2);
-      text-align: center;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 24px;
-      margin-top: 8px;
-    }
-
-    .btn {
-      padding: 12px 32px;
-      border: none;
-      border-radius: 9999px;
-      font-size: 18px;
-      font-weight: 600;
-      color: white;
-      cursor: pointer;
-      font-family: 'Quicksand', sans-serif;
-      transition: transform 0.2s;
-    }
-
-    .btn-yes {
-      background: linear-gradient(135deg, hsl(340, 80%, 55%), hsl(350, 70%, 50%));
-      box-shadow: 0 4px 15px hsla(340, 80%, 55%, 0.4);
-    }
-
-    .btn-yes:hover {
-      transform: scale(1.1);
-    }
-
-    .btn-no {
-      background: linear-gradient(135deg, hsl(330, 50%, 75%), hsl(340, 40%, 70%));
-      box-shadow: 0 4px 15px hsla(330, 50%, 75%, 0.4);
-    }
-
-    .btn-no.dodging {
-      position: fixed;
-      z-index: 50;
-      transition: none;
-    }
-
-    .success {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-      animation: scale-in 0.4s ease-out;
-    }
-
-    .success span {
-      font-size: 60px;
-    }
-
-    .success p {
-      font-family: 'Dancing Script', cursive;
-      font-size: 30px;
-      font-weight: 700;
-      color: hsl(345, 90%, 40%);
-    }
-
-    .celeb-heart {
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      pointer-events: none;
-      font-size: 30px;
-      z-index: 50;
-      animation: celebration-heart 1.5s ease-out forwards;
-    }
-  </style>
+    <script type="text/javascript" src="./js/app.js"></script>
 </head>
 
 <body>
-
-  <div class="center" id="center">
-    <div class="oval">
-      <!-- <span>👤</span> -->
-      <span class="avatar">
-        <img src="./img.jpg" alt="Avatar" />
-      </span>
+    <div class="center" id="center">
+        <div class="oval" id="ovalForAvatar">
+            <span class="avatar">
+                <img src="./images/img.jpg" alt="👤" />
+            </span>
+        </div>
+        <h1>Will you be my Valentine today and forever?</h1>
+        <div class="buttons" id="buttons">
+            <button class="btn btn-yes" id="yesBtn">Yes 💝</button>
+            <button class="btn btn-no" id="noBtn">No 😢</button>
+        </div>
+        <div class="success" id="success" style="display:none">
+            <span>💕</span>
+            <p>Yay! I'm so happy! 💖</p>
+        </div>
     </div>
-    <h1>Will you be my Valentine today and forever?</h1>
-    <div class="buttons" id="buttons">
-      <button class="btn btn-yes" id="yesBtn" onclick="handleYes()">Yes 💝</button>
-      <button class="btn btn-no" id="noBtn" onmouseenter="dodgeNo()">No 😢</button>
-    </div>
-    <div class="success" id="success" style="display:none">
-      <span>💕</span>
-      <p>Yay! I'm so happy! 💖</p>
-    </div>
-  </div>
-
-  <script>
-    const HEARTS = ["❤️", "💕", "💗", "💖", "💘", "💝"];
-    const mouse = { x: 0, y: 0 };
-    let isDodging = false;
-
-    document.addEventListener("mousemove", e => { mouse.x = e.clientX; mouse.y = e.clientY; });
-
-    // Create falling hearts
-    for (let i = 0; i < 30; i++) {
-      const el = document.createElement("div");
-      el.className = "falling-heart";
-      el.style.left = Math.random() * 100 + "%";
-      el.style.fontSize = (14 + Math.random() * 24) + "px";
-      el.style.opacity = 0.3 + Math.random() * 0.5;
-      el.style.setProperty("--duration", (6 + Math.random() * 8) + "s");
-      el.style.setProperty("--delay", (Math.random() * 10) + "s");
-      el.style.setProperty("--sway-dur", (2 + Math.random() * 3) + "s");
-      el.innerHTML = `<span>${HEARTS[Math.floor(Math.random() * HEARTS.length)]}</span>`;
-      document.body.appendChild(el);
-    }
-
-    function dodgeNo() {
-      const btn = document.getElementById("noBtn");
-      const yesBtn = document.getElementById("yesBtn");
-      const bW = 120, bH = 50, margin = 20;
-      const maxX = window.innerWidth - bW - margin;
-      const maxY = window.innerHeight - bH - margin;
-
-      if (!isDodging) {
-        isDodging = true;
-        btn.classList.add("dodging");
-      }
-
-      for (let a = 0; a < 50; a++) {
-        const x = margin + Math.random() * maxX;
-        const y = margin + Math.random() * maxY;
-
-        const dx = x + bW / 2 - mouse.x, dy = y + bH / 2 - mouse.y;
-        if (Math.sqrt(dx * dx + dy * dy) < 150) continue;
-
-        const r = yesBtn.getBoundingClientRect();
-        if (x < r.right + 20 && x + bW > r.left - 20 && y < r.bottom + 20 && y + bH > r.top - 20) continue;
-
-        btn.style.left = x + "px";
-        btn.style.top = y + "px";
-        return;
-      }
-      btn.style.left = margin + "px";
-      btn.style.top = margin + "px";
-    }
-
-    function handleYes() {
-      document.getElementById("buttons").style.display = "none";
-      const noBtn = document.getElementById("noBtn");
-      if (noBtn) noBtn.style.display = "none";
-      document.getElementById("success").style.display = "flex";
-
-      for (let i = 0; i < 20; i++) {
-        const span = document.createElement("span");
-        span.className = "celeb-heart";
-        span.textContent = HEARTS[Math.floor(Math.random() * HEARTS.length)];
-        span.style.setProperty("--tx", ((Math.random() - 0.5) * 400) + "px");
-        span.style.setProperty("--ty", (-(100 + Math.random() * 300)) + "px");
-        document.body.appendChild(span);
-        setTimeout(() => span.remove(), 2000);
-      }
-    }
-  </script>
 </body>
 
 </html>
