--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <img src="./images/img.jpg" alt="👤" />
             </span>
         </div>
-        <h1>Ти будеш моєю Валентинкою сьогодні і назавжди?</h1>
+        <h1>Will you be my Valentine today and forever?</h1>
         <div class="buttons" id="buttons">
             <button class="btn btn-yes" id="yesBtn">Yes 💝</button>
             <button class="btn btn-no" id="noBtn">No 😢</button>
         </div>
         <div class="success" id="success" style="display:none">
             <span>💕</span>
-            <p>Ура! Я так счастлив! 💖</p>
+            <p>Yay! I'm so happy! 💖</p>
         </div>
     </div>
 </body>
